--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch==2.0.1
-torchvision==0.15.2
-onnx==1.14.0
+#torch==2.0.1
+#torchvision==0.15.2
+#onnx==1.14.0
+numpy==1.23.5
 onnxruntime==1.15.1
 pycocotools==2.0.7
 PyYAML==6.0.1
